--- a/Panels/EmployeeCRUD.resx
+++ b/Panels/EmployeeCRUD.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="buttonDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonUpdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7AAAAOwAFq1okJAAAAB3RJ
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA68AAAOvAGVvHJJAAAAB3RJ
         TUUH5AofEjIHb30akAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMtSURBVFhH
         vVc7a1RBFJ5oMnM3O3OTQGJA0U7wUVlq4xNFEAVFgn9AG7EStPGVLtqIL7AXRJJCMX2KiFF8oCksBMVC
         I1ERjEp0E4nfuXN278zsXXazm5sPPpKdc+Y7Z15n5orG0aeF1ANCmdsiMk/x9wtYAn+Bb8FxoeKb4H44
@@ -139,17 +139,34 @@
         V4zSV7FUEwgyDdJ+IU7bNgSVVF7LFa4ehPgPb6J1v9jv4O8AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="buttonDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA68AAAOvAGVvHJJAAAAB3RJ
+        TUUH5AofEjMHdmYr0QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHCSURBVFhH
+        zZWxSkMxFIZDoUnamxMUFHTRRUHBQVdRF1109wH0JRxd9SH0AXwABXXSWd11rror1CJUk96TFpP03jTN
+        BT/4l/Pf/z+57e0tGRFKGJwqvSr9WGoRDie9aypDL3AX/1V+iIrQd6mXNGAdJwMasIGHaOGkAsxdDqPM
+        L4VPzBMmb1VJp1+WTqpT3pDG5Bxu85Av94UTSlzjNg/V3LmtDm7z4A+k11AYfDkXp1cbt3lgcq/3O65S
+        TO7itv8KFSuEwlE1Ut2lcDj0fG9pxOEAtxRAxb43rF+/g9ftaDMj3V2KfhB9YUPMrK+QB5CLLW/YEDMz
+        4rCJbgH15po3bIiZGdWzVXQLYHLRGzbEzPqSC+gW0GzOesOGmJlRls2gW8QUeMOGmFnfmxboFlJTF3fd
+        MBIzy9VV01pulsHg0wqnOMAHOgEweLfCKQ7whk4ADF6scIoDPKMTAJNPToEhZtaTeEQnAAb3ToEhZpbr
+        Dp0AGFxZ4RQHuEQnAC4vnAL9D6ff5TEzLd0ZDIVzp2BcUTjD9gCoOPaWjCPdGQwVyyrUdkri1VafwBK2
+        B8KzHfXTeVDhb6tsFKms6uDZNrZaEPILH6U1SDUYSX8AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="buttonInsert.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7AAAAOwAFq1okJAAAAB3RJ
-        TUUH5AsaEx8eIEBbCgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEfSURBVDhP
-        lZO9TsMwFIUNM4/AhPiRna0LA4zMrCw8ACx9gE7pO6AOFezIPytPACsDUkckfMPUCqF2r9x7by0laX7k
-        HulEsn3OF0exxV4K4UBZP5YG/tEzZYtLkWm4lab4VAa+24zBr0zPj6gsLUxwHCqeCXwsMDiSzt+0OdP+
-        uqNM/iNAkLY4i5tsqrsclPF5P4DKBp6qpdJ+KvJw2A1IKZN4YheQWibxZBWwT5nECxWAsvDQLFIGJgzX
-        cIfjlxhvAvBMfNSK7PLNeJCGOPfGYRIHIuDU/R7jeF0W62VSLyAuUnGtNLzT59C2ORjVC7hw/ooCtBNe
-        bFEvIEUtAL/CW3V/7vxJivFvPKNfYx0BGh6RuOSdJJhvqPsZbNtCbADUlpjZdruz+gAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA68AAAOvAGVvHJJAAAAB3RJ
+        TUUH5AofEjQPN/w1JAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAG1SURBVFhH
+        7Ze/LwRBFMdfws1M3L5xRCLR0En09DqNHyWKKyUUSk4joaJU+hNolEpaSpVIRENCoyAScuK83Xt3t9zM
+        7t7Onh/JfZJvNvv2zXe+xczuDkQgQOltkHhF+iBVHPUKCs/oOsP+MSh9+M0gOwm9yLNYyOmJ0IATELju
+        Lm+TvG7Z84Fm6apOZkJ6K9xYAejXXHVH6WLdVxVGuGpA4FojQIYInK37ShzlqoFOAHsAwdd0OAUQ3jwt
+        zpfAJC2JAyhcoobrQDUU7vDAd5B6lautkTiACYm7ocG+9qnaXX2YkIwD+DoGGEDuiCcygMCN4PVrk8TL
+        0OCGFJ5DPj/ILtFYA6jCcOhBGt3QIh1jNzvWAP7NV8M0eqLFOcWOZtocwFc52EE2fiDAG62XIrs209YA
+        Ch9BeZPsaObvLkIfgaWmrRdWW7dhEswvoiOAoR7uiCfbAN4eVSN+qwwkDvDrHyPj5xjn6P45MEmLU4As
+        6AT4PwGkt9wI0NfLVXcSH0xyerzeKPGUkpdIhuNWKwqOZnfseU+zxLxDlD7g5uwl9ALPEol/PN+iAbXU
+        riqTLkjT7E8AfAIRDJS/R84uEQAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
